--- a/components/_base/styles.css
+++ b/components/_base/styles.css
@@ -286,7 +286,7 @@ img.header-logo-img--compact {
   display: block;
   width: 100%;
   text-align: left;
-  line-height: 23px;
+  line-height: normal;
   mso-line-height-rule: exactly;
 }
 
@@ -294,7 +294,7 @@ img.header-logo-img--compact {
   display: block;
   width: 100%;
   text-align: center;
-  line-height: 23px;
+  line-height: normal;
   mso-line-height-rule: exactly;
 }
 
